--- a/lessons/10-clean-urls/index.html
+++ b/lessons/10-clean-urls/index.html
@@ -2,6 +2,8 @@
 <html>
 <meta charset=utf-8/>
 <title>My First React Router App</title>
-<link rel=stylesheet href=index.css>
+<link rel="stylesheet" href="/index.css">
 <div id=app></div>
-<script src="bundle.js"></script>
+<script src="/bundle.js"></script>
+<!-- cant have relative links due to  if we have deep paths then our URLS can't find the files-->
+<!-- //history-api-fallback allows URL manipulation in our package.json/ 404s will fall back to index -->
