--- a/lessons/13-server-rendering/public/index.html
+++ b/lessons/13-server-rendering/public/index.html
@@ -5,3 +5,6 @@
 <link rel=stylesheet href=/index.css>
 <div id=app></div>
 <script src="/bundle.js"></script>
+<noscript>
+    <h1>Enable Javascript to run this app</h1>
+</noscript
